--- a/chroma/src/main/res/values/strings.xml
+++ b/chroma/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">chroma</string>
+
+    <string name="dialog_button_positive">OK</string>
+    <string name="dialog_button_negative">Cancel</string>
 </resources>
