Refactor to improve modularity, add HSV color model

--- a/chroma/src/main/res/values/strings.xml
+++ b/chroma/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="channel_red">R</string>
     <string name="channel_green">G</string>
     <string name="channel_blue">B</string>
+
+    <string name="channel_hue">H</string>
+    <string name="channel_saturation">S</string>
+    <string name="channel_value">V</string>
 </resources>
