--- a/chroma/src/main/res/values/strings.xml
+++ b/chroma/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">chroma</string>
 
-    <string name="dialog_button_positive">OK</string>
-    <string name="dialog_button_negative">Cancel</string>
+    <string name="button_positive">OK</string>
+    <string name="button_negative">Cancel</string>
 
     <string name="channel_red">R</string>
     <string name="channel_green">G</string>
